[project]
name = "cnki-mcp"
version = "0.1.0"
description = "CNKI MCP Server for academic paper search (Playwright)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "playwright",
    "playwright-stealth>=2.0.0",
]

[project.scripts]
cnki-mcp = "cnki_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
